Updating openapi stuff
