# backend/src/generated/java/api/openapi.yaml
@@ -191,6 +191,70 @@ paths:
       - patient-controller
       x-content-type: application/json
       x-accepts: application/json
+  /patients/journal-entries/{entryId}:
+    delete:
+      operationId: deleteEntry
+      parameters:
+      - explode: false
+        in: path
+        name: entryId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "204":
+          description: No Content
+      tags:
+      - journal-entry-controller
+      x-accepts: application/json
+    get:
+      operationId: getOne
+      parameters:
+      - explode: false
+        in: path
+        name: entryId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/JournalEntryOutputDTO'
+          description: OK
+      tags:
+      - journal-entry-controller
+      x-accepts: '*/*'
+    put:
+      operationId: updateJournalEntry
+      parameters:
+      - explode: false
+        in: path
+        name: entryId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/JournalEntryRequestDTO'
+        required: true
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/JournalEntryOutputDTO'
+          description: OK
+      tags:
+      - journal-entry-controller
+      x-content-type: application/json
+      x-accepts: '*/*'
   /patients/{patientId}/meetings:
     get:
       operationId: listMeetings
@@ -290,6 +354,40 @@ paths:
       - patient-controller
       x-content-type: application/json
       x-accepts: '*/*'
+  /patients/journal-entries:
+    get:
+      operationId: listAll
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                items:
+                  $ref: '#/components/schemas/GetAllJournalEntriesDTO'
+                type: array
+          description: OK
+      tags:
+      - journal-entry-controller
+      x-accepts: '*/*'
+    post:
+      operationId: create
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/JournalEntryRequestDTO'
+        required: true
+      responses:
+        "201":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/JournalEntryOutputDTO'
+          description: Created
+      tags:
+      - journal-entry-controller
+      x-content-type: application/json
+      x-accepts: '*/*'
   /patients/conversations:
     post:
       operationId: createConversation
@@ -363,6 +461,22 @@ paths:
           description: OK
       tags:
       - patient-controller
+      x-accepts: '*/*'
+  /patients/journal-entries/tags:
+    get:
+      operationId: getAllTags
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                items:
+                  type: string
+                type: array
+                uniqueItems: true
+          description: OK
+      tags:
+      - journal-entry-controller
       x-accepts: '*/*'
   /patients/conversations/{patientId}:
     get:
@@ -481,6 +595,62 @@ components:
         language:
           type: string
       type: object
+    JournalEntryRequestDTO:
+      properties:
+        title:
+          maxLength: 255
+          minLength: 0
+          type: string
+        content:
+          type: string
+        tags:
+          items:
+            type: string
+          type: array
+          uniqueItems: true
+        sharedWithTherapist:
+          type: boolean
+        aiAccessAllowed:
+          type: boolean
+      required:
+      - content
+      - title
+      type: object
+    JournalEntryOutputDTO:
+      example:
+        createdAt: 2000-01-23T04:56:07.000+00:00
+        aiAccessAllowed: true
+        sharedWithTherapist: true
+        id: id
+        title: title
+        content: content
+        updatedAt: 2000-01-23T04:56:07.000+00:00
+        tags:
+        - tags
+        - tags
+      properties:
+        id:
+          type: string
+        createdAt:
+          format: date-time
+          type: string
+        updatedAt:
+          format: date-time
+          type: string
+        title:
+          type: string
+        content:
+          type: string
+        tags:
+          items:
+            type: string
+          type: array
+          uniqueItems: true
+        sharedWithTherapist:
+          type: boolean
+        aiAccessAllowed:
+          type: boolean
+      type: object
     CreateMeetingDTO:
       properties:
         externalMeetingId:
@@ -565,6 +735,38 @@ components:
           type: string
         requestMessage:
           type: string
+      type: object
+    GetAllJournalEntriesDTO:
+      example:
+        createdAt: 2000-01-23T04:56:07.000+00:00
+        aiAccessAllowed: true
+        sharedWithTherapist: true
+        id: id
+        title: title
+        updatedAt: 2000-01-23T04:56:07.000+00:00
+        tags:
+        - tags
+        - tags
+      properties:
+        id:
+          type: string
+        createdAt:
+          format: date-time
+          type: string
+        updatedAt:
+          format: date-time
+          type: string
+        title:
+          type: string
+        tags:
+          items:
+            type: string
+          type: array
+          uniqueItems: true
+        sharedWithTherapist:
+          type: boolean
+        aiAccessAllowed:
+          type: boolean
       type: object
     NameConversationOutputDTO:
       example:
